# ai-agent-security-attack

./: .gitignore  README.md  attack.py  pyproject.toml
artifacts/: report.json
kaggle_kernel/: jed-attack-submission.ipynb  kernel-metadata.json
scripts/: build_kaggle_notebook.py  download_competition.sh  evaluate.sh  package_submission.sh  push_kernel.sh  setup_kaggle_oauth.sh  submit_competition.sh  verify_kaggle_oauth.sh
src/agent_security/: __init__.py
src/agent_security/algorithms/: __init__.py  champion_attack.py  chief_scientist_attack.py  elite_exfil_attack.py  elite_exfil_engine.py  multi_step_explorer.py  replay_dense_attack.py  scaled_exfil_attack.py  template_probe_attack.py  verify_keep_attack.py
src/agent_security/config/: __init__.py  explorer_settings.py
src/agent_security/coordinators/: __init__.py  branch_runner.py  candidate_merger.py  probe_runner.py
src/agent_security/exploration/: __init__.py  attack_templates.py  cell_selector.py  elite_profiles.py  elite_prompts.py  elite_scoring.py  elite_variants.py  exemplar.py  frontier_archive.py  prompt_catalog.py  replay_budget.py  reward_estimator.py  signature_builder.py
tests/: test_champion_attack.py  test_chief_scientist_attack.py  test_elite_exfil_attack.py  test_prompt_catalog.py  test_replay_budget.py  test_replay_dense_attack.py  test_template_probe_attack.py
