[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-security-competition"
version = "0.1.0"
description = "Go-Explore multi-step red-team attacks for the Kaggle AI Agent Security competition"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Wisdom Dogah", email = "wisdomdogah@users.noreply.github.com" }]
keywords = ["kaggle", "ai-security", "red-team", "tool-use", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "aicomp-sdk>=3.1.0",
]

[project.urls]
Homepage = "https://github.com/dogahwisdom/ai-agent-security-attack"
Repository = "https://github.com/dogahwisdom/ai-agent-security-attack"
Issues = "https://github.com/dogahwisdom/ai-agent-security-attack/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
    "mypy>=1.13",
]

[tool.hatch.build.targets.wheel]
only-include = ["src/agent_security"]

[tool.hatch.build.targets.wheel.sources]
"src/agent_security" = "agent_security"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["agent_security"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
